--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     name: cynthia-y-fer
     env: python
     plan: free
-    buildCommand: ""
-    startCommand: python3 app.py
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
